[gd_scene format=3 uid="uid://y16e7cyb1kjn"]

[ext_resource type="PackedScene" uid="uid://bqgqknlxtbjjg" path="res://components/profiles/profile_button.tscn" id="1_gyasx"]
[ext_resource type="Script" uid="uid://bwo6vugt7tcs0" path="res://components/profiles/profiles.gd" id="1_qhmmv"]
[ext_resource type="Texture2D" uid="uid://bcovw01lvaf0o" path="res://data/images/profiles/Hungr.jpg" id="2_spysj"]

[node name="Profiles" type="Control" unique_id=475539994]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1312.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qhmmv")

[node name="BackgroundRect" type="TextureRect" parent="." unique_id=1231786544]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spysj")
expand_mode = 1

[node name="ButtonsContainer" type="GridContainer" parent="." unique_id=1162176127]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.121296294
anchor_right = 1.0
anchor_bottom = 0.94074076
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ProfilesGrid"
columns = 3
metadata/_edit_use_anchors_ = true

[node name="ProfileButton" parent="ButtonsContainer" unique_id=400822401 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton2" parent="ButtonsContainer" unique_id=1574138881 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton3" parent="ButtonsContainer" unique_id=1398094312 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton4" parent="ButtonsContainer" unique_id=710113478 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton5" parent="ButtonsContainer" unique_id=1533755469 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton6" parent="ButtonsContainer" unique_id=1535425086 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton7" parent="ButtonsContainer" unique_id=657727474 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton8" parent="ButtonsContainer" unique_id=541106214 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfileButton9" parent="ButtonsContainer" unique_id=57156859 instance=ExtResource("1_gyasx")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ButtonsContainer/ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton2" to="." method="_on_profile_button_2_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton3" to="." method="_on_profile_button_3_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton4" to="." method="_on_profile_button_4_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton5" to="." method="_on_profile_button_5_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton6" to="." method="_on_profile_button_6_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton7" to="." method="_on_profile_button_7_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton8" to="." method="_on_profile_button_8_pressed"]
[connection signal="pressed" from="ButtonsContainer/ProfileButton9" to="." method="_on_profile_button_9_pressed"]
